<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="logo_description">Logo image</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="user_my_location">User my location</string>
    <string name="my_representatives">My representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="follow_election">Follow election</string>
    <string name="state_header">Election Information</string>
    <string name="state_locations">Voting Locations</string>
    <string name="state_ballot">Ballot Information</string>
    <string name="representative_image">Representative image</string>
    <string name="web_button">Web button</string>
    <string name="facebook_button">Facebook button</string>
    <string name="twitter_button">Twitter button</string>


</resources>
