<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/representative_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/title_text"
            style="@style/CustomSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="title"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="name"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/party_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="party"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <ImageButton
            android:id="@+id/www_button"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="@dimen/inner_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_button"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/web_button" />

        <ImageButton
            android:id="@+id/facebook_button"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="@dimen/inner_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_button"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_button" />

        <ImageButton
            android:id="@+id/twitter_button"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>